[package]
name = "blog-markdown-api-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
confy = "0.6"
serde = { version = "1", features = ["derive"] }
url = {version="2.5", features=["serde"]}
tokio = {version="1", default-features=false, features= ["rt-multi-thread", "fs", "io-util", "sync"] }
tokio-util = {version="0.7", features=["io"]}
tower-http = {version="0.5", features=["fs"]}
axum = {version="0.7", default-features= false, features= ["tokio", "http2"] }
chrono = {version="0.4", default-features=false, features=["clock", "std", "serde", "now", "unstable-locales"]}
accept-language = "3.1"
atom_syndication = {version="0.12", default-features=false}
## better looking code
enclose = "1.2"
cfg-if = "1.0"
# error handling
axum_thiserror = "0.1"
thiserror = "1.0"
# logs
tracing = "0.1"
tracing-subscriber = "0.3"
# external cache
reqwest = {version="0.12", default-features= false , optional=true}
get_pass = {git = "https://github.com/Cyrix126/get_pass", optional=true}
[dev-dependencies]
# macro feature enabled to get nicer error with #[debug_handler]
axum = {version="0.7", default-features=false, features=["macros"]}
axum-test = "15.3"
[features]
default=["update_cache"]
update_cache=["reqwest", "get_pass"]
